getting basic image building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ option(BUILD_MIMXRT1051 "Build MIMXRT1051 Configuration" OFF)
 option(BUILD_MIMXRT1052 "Build All F4 configurations" OFF)
 
 if(BUILD_MIMXRT1052 OR BUILD_ALL)
-set(MIMXRT_VARIANT MIMXRT1052CVJ5B)
+set(MIMXRT_VARIANT imxrt1052)
 set(MIMXRT_VARIANT_DEFINE CPU_MIMXRT1052CVJ5B)
 include(${CMAKE_SOURCE_DIR}/mimxrt1052.cmake)
 endif()
