--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
 	${SOURCES_PREFIX}/fault_dev.c
 	${SOURCES_PREFIX}/i2c_dev.c
 	${SOURCES_PREFIX}/mcu_dev.c
+	${SOURCES_PREFIX}/mem_dev.c
 	${SOURCES_PREFIX}/mpu_dev.c
 	${SOURCES_PREFIX}/pio_dev.c
 	${SOURCES_PREFIX}/spi_local.c
